--- a/style.css
+++ b/style.css
@@ -12,10 +12,8 @@ body{ /*①ページ全体のスタイルを指定するセレクタは？
 /* ページ全体の最大幅 */
 body {
   max-width: 900px;
-  marginright: auto;//
-  marginleft:  auto;//
-  /*③margin プロパティで、上下余白は0、左右余白は自動 auto（中央配置）に指定する値は？
-　（ページを中央配置するための値）
+  margin:auto; 
+  
 */
 }
 
